finishes footer and fixes overflow of portfolio between medium and large breakpoints

--- a/public/index.css
+++ b/public/index.css
@@ -19,6 +19,11 @@ body {
   flex-direction: column; */
 }
 
+noscript {
+  margin: 0;
+  padding: 0;
+}
+
 /* #root {
   height: 100vh;
   margin: 0;
@@ -39,11 +44,8 @@ img {
 }
 
 .container {
-  min-height: 100%;
-  margin: 0;
-  padding: 0;
-  /* width: auto;
-  flex-wrap: wrap; */
+  width: auto;
+  flex-wrap: wrap;
 }
 
 strong {
